--- a/hw4/index.html
+++ b/hw4/index.html
@@ -32,7 +32,7 @@
       <option value="example1">Macbeth</option>
       <option value="example2">Emma</option>
       <option value="example3">Alice in Wonderland</option>
-      <option value="example4">Ceaser</option>
+      <option value="example4">The Tragedy of Julius Caesar</option>
     </select>
   </div>
   <div>
